fix error handling and start webpush
